# tree-sitter-pddl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.pddl  tree-sitter.json
bindings/c/: tree-sitter-pddl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pddl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPddl/: pddl.h
bindings/swift/TreeSitterPddlTests/: TreeSitterPddlTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: numer.txt
