[package]
name = "tree-sitter-pddl"
description = "Parser for the PDDL language"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pddl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/arbimo/tree-sitter-pddl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"
